# openalplusplus

./: CMakeLists.txt  Doxyfile  INSTALL  LICENSE.txt  Makefile  Makefile.in  NEWS  README  W32INST.BAT  alpp.h  audiobase.cpp  audiobase.h  audioconvert.cpp  audioconvert.h  audioenviroment.cpp  audioenviroment.h  autogen.sh  configure  configure.in  deviceupdater.cpp  deviceupdater.h  error.cpp  groupsource.cpp  groupsource.h  inputdevice.cpp  inputdevice.h  listener.cpp  listener.h  netstream.cpp  netstream.h  netupdater.cpp  netupdater.h  openalpp.dsp  openalpp.dsw  openalpp.mak  openalpp.ncb  openalpp.opt  openalpp.plg  openalpp.sln  openalpp.vcproj  (+17 more)
VisualStudio/: moving.dsp  moving.vcproj  multiple.dsp  multiple.vcproj  openalpp.dsp  openalpp.dsw  openalpp.sln  openalpp.vcproj  playstream.vcproj  simple.dsp  simple.vcproj  testfstream.vcproj  testmic.dsp  testmic.vcproj  testsend.dsp  testsend.vcproj  teststream.dsp  teststream.vcproj
doc/: Doxyfile  doxygen.cfg  index.html
include/: alpp.h  audiobase.h  audioconvert.h  audioenviroment.h  audioenvironment.h  deviceupdater.h  error.h  groupsource.h  inputdevice.h  listener.h  netstream.h  netupdater.h  positionedobject.h  sample.h  sounddata.h  source.h  sourcebase.h  stream.h  streamupdater.h  windowsstuff.h
include/openalpp/: Makefile.am  alpp.h  audiobase.h  audioconvert.h  audioenvironment.h  config.h  deviceupdater.h  error.h  export.h  filestream.h  filestreamupdater.h  groupsource.h  inputdevice.h  listener.h  netstream.h  netupdater.h  positionedobject.h  sample.h  sounddata.h  source.h  sourcebase.h  stream.h  streamupdater.h  windowsstuff.h
lib/: Makefile
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  audiobase.cpp  audioconvert.cpp  audioenvironment.cpp  deviceupdater.cpp  error.cpp  filestream.cpp  filestreamupdater.cpp  groupsource.cpp  inputdevice.cpp  listener.cpp  netstream.cpp  netupdater.cpp  nofilestream.cpp  noinputdevice.cpp  nostreaming.cpp  sample.cpp  sounddata.cpp  source.cpp  sourcebase.cpp  stream.cpp  streamupdater.cpp
tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  moving.cpp  moving.dsp  multiple.cpp  playstream.cpp  simple.cpp  simple.dsp  test.cpp  test.plg  testfstream.cpp  testmic.cpp  testmic.dsp  testmic.plg  testsend.cpp  testsend.dsp  testsend.plg  teststream.cpp  teststream.dsp  teststream.plg
