dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/alpp.h)

dnl C++ style
AC_LANG_CPLUSPLUS
CXX=g++
AC_PROG_CXX
AC_PROG_CXXCPP

dnl Checks for programs.
AC_PROG_CPP
AC_PROG_LN_S

dnl "OBJECTS" is all the object files that should be linked into OpenAL++
dnl Macros are defined here to get cleaner code in the library checks below
AC_SUBST(OBJECTS)
AC_DEFUN(ALPP_BASIC,[OBJECTS="\$(BASICOBJECTS)"
		     echo "** Excluding streaming and capture capabilities (CommonC++ 1.9 not found)"])
AC_DEFUN(ALPP_STREAM,[OBJECTS="\$(BASICOBJECTS) \$(STREAMOBJECTS)"
			echo "** Excluding capture capabilities! (PortAudio not found)"])
AC_DEFUN(ALPP_FULL,OBJECTS="\$(BASICOBJECTS) \$(STREAMOBJECTS) \$(DEVICEOBJECTS)")


dnl Checks for libraries.
dnl If CommonC++ is not found, do not link stream/capture files in.
dnl If PortAudio is not found, do not link capture files in.
AC_CHECK_LIB(openal,main)
AC_CHECK_LIB(ccgnu,main,
	AC_CHECK_LIB(portaudio,main,ALPP_FULL,ALPP_STREAM),
	ALPP_BASIC,-lpthread -ldl)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile tests/Makefile)
