# INITIATE AUTOCONF
AC_INIT([src/Makefile.am])

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(openalpp,0.2)

dnl C++ style
AC_LANG_CPLUSPLUS
#CXX=g++
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Macros are defined here to get cleaner code in the library checks below
AC_SUBST(SOURCEFILES)

dnl Checks for libraries.
dnl If CommonC++ is not found, do not link stream/capture files in.
dnl If PortAudio is not found, do not link capture files in.
AC_CHECK_LIB(openal,main)
AC_CHECK_LIB(ccgnu2,main,WITH_CCGNU="yes",,-lpthread -ldl)
AC_CHECK_LIB(portaudio,main,WITH_PORTAUDIO="yes")

AM_CONDITIONAL(WITH_CCGNU, test "$WITH_CCGNU" = "yes")
AM_CONDITIONAL(WITH_PORTAUDIO, test "$WITH_PORTAUDIO" = "yes")


CPPFLAGS="$CPPFLAGS -I`ccgnu2-config --includes`"

AC_SUBST(CCGNULIBS)
CCGNULIBS="$LIBS `ccgnu2-config --libs`"

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile include/Makefile include/openalpp/Makefile src/Makefile tests/Makefile)
