LINK_DIRECTORIES(../src)
ADD_EXECUTABLE(moving moving.cpp)
ADD_EXECUTABLE(simple simple.cpp)
ADD_EXECUTABLE(testfstream testfstream.cpp)
ADD_EXECUTABLE(testmic testmic.cpp)
ADD_EXECUTABLE(testsend testsend.cpp)
ADD_EXECUTABLE(teststream teststream.cpp)

FIND_LIBRARY(EXTRALIBS openal ${LIBDIRS})
FIND_LIBRARY(PALIB portaudio ${LIBDIRS})
IF(PALIB)
  SET(EXTRALIBS ${EXTRALIBS} ${PALIB})
ENDIF(PALIB)
FIND_LIBRARY(CCGNULIB ccgnu2 ${LIBDIRS})
IF(CCGNULIB) 
  FIND_LIBRARY(THREADLIB pthread ${LIBDIRS})
  FIND_LIBRARY(DLLIB dl ${LIBDIRS})
  SET(EXTRALIBS ${EXTRALIBS} ${CCGNULIB} ${DLLIB} ${THREADLIB})
ENDIF(CCGNULIB)
FIND_LIBRARY(VORBISFILELIB vorbisfile ${LIBDIRS})
FIND_LIBRARY(VORBISLIB vorbis ${LIBDIRS})
FIND_LIBRARY(OGGLIB ogg ${LIBDIRS})
IF(VORBISLIB)
  SET(EXTRALIBS ${EXTRALIBS} ${VORBISFILELIB} ${VORBISLIB} ${OGGLIB})
ENDIF(VORBISLIB)

TARGET_LINK_LIBRARIES(moving openalpp ${EXTRALIBS})
TARGET_LINK_LIBRARIES(simple openalpp ${EXTRALIBS})
TARGET_LINK_LIBRARIES(testfstream openalpp ${EXTRALIBS})
TARGET_LINK_LIBRARIES(testmic openalpp ${EXTRALIBS})
TARGET_LINK_LIBRARIES(testsend openalpp ${EXTRALIBS})
TARGET_LINK_LIBRARIES(teststream openalpp ${EXTRALIBS})
